@@ -2332,7 +2332,7 @@ fole_s_create_guid(VALUE self)
  * You must not use these method.
  */
 
-/* :nodoc */
+/* :nodoc: */
 static VALUE
 fole_s_ole_initialize(VALUE self)
 {
@@ -2340,7 +2340,7 @@ fole_s_ole_initialize(VALUE self)
     return Qnil;
 }
 
-/* :nodoc */
+/* :nodoc: */
 static VALUE
 fole_s_ole_uninitialize(VALUE self)
 {
